--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-README test
+Magento Command Line Tools
+
+Type 'magento-help <command>' for more information on a tool.
+
+All tools are sensitive to a particular magento root, and will read
+your magento configuration manually.
